# cv-analyzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: __main__.py  bootstrap.py  containers.py  entrypoint.py  main.py  middleware.py  router.py  utils.py
app/api/: __init__.py  dependencies.py  deps.py  error_handlers.py  main.py  middleware.py
app/api/endpoints/: cv_operations.py
app/api/routes/: cv.py  root.py  utils.py
app/api/serializers/: __init__.py  error.py  match_vacancies.py
app/core/: __init__.py  config.py  exceptions.py  loggers.py  settings.py
app/core/exceptions/: __init__.py  base.py  cv.py  file.py  generative.py  language_detection.py  text_translation.py
app/core/interfaces/: __init__.py  file_text_extraction.py  generative.py  job_site_parsing.py  text.py
app/helpers/: __init__.py  async_rest_client.py  bs4.py  concurrency.py  genai.py  http.py  language.py  upload_file.py  utils.py
app/helpers/cv/: __init__.py  cv_analysis.py
app/helpers/file/: __init__.py  file_processing.py  text_extraction.py
app/helpers/generative/: __init__.py  content_generation.py  prompt_managing.py
app/infrastructure/: __init__.py  async_rest_client.py
app/models/: __init__.py  http_params.py
app/models/domain/: file.py  (+4 more)
app/prompts/: extract_search_filters.tpl  score.j2  search_filters.j2  vacancy_scoring.tpl
app/schemas/: filters.py  vacancies.py  vacancy.py
app/services/: __init__.py  cv_analysis.py  cv_operations.py  vacancy_processing.py  vacancy_scoring.py  vacancy_scraping.py
(+42 files in other folders)
